# AlgologiX

./: .gitignore  README.md  algorithms.md  docs.md
backend/: .vercelignore  README.md  demo.py  index.py  pyproject.toml  requirements.txt  vercel.json
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: aco.py  adaptive.py  ga.py  graph.py  resilience.py  rl.py  vrp.py
backend/app/store/: state.py
backend/app/utils/: simulation.py
backend/tests/: test_smoke.py
frontend/: .env.example  README.md  index.html  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Button.jsx  Card.jsx  Layout.jsx
frontend/src/data/: mockData.json
frontend/src/pages/: Dashboard.jsx  Deliveries.jsx  Events.jsx  Routes.jsx  Vehicles.jsx
frontend/src/services/: api.js
frontend/src/utils/: mockData.js
