[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algologix-backend"
version = "0.1.0"
description = "Adaptive logistics optimizer backend (FastAPI + NetworkX + ACO/GA/RL)"
authors = [{name = "Reality Stevens"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "networkx>=3.3",
  "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
